# qwen3_deploy

./: Cargo.toml  README.md
src/: api.rs  chat_template.jinja  download_model.py  lib.rs  main.rs  qwen3.rs  utils.rs
tests/: chat_response_tests.rs  chat_template_tests.rs  chat_tests.rs
