[package]
name = "qwen3_deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
hf-hub = "0.4.3"
image = "0.25.6"
minijinja = "2.11.0"
serde = "1.0.219"
serde_json = "1.0.141"
tokenizers = "0.21.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"