[package]
name = "qwen3_deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
minijinja = "2.11.0"
serde = "1.0.219"
serde_json = "1.0.141"
tokenizers = "0.21.2"
anyhow = "1.0.98"
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
tokio = "1.46.1"
openai_dive = { version = "1.2.3", features = ["stream"] }
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
log = "0.4.27"
clap = {version = "4.5.41",features = ["derive"]}